--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.11",
     "@radix-ui/react-hover-card": "^1.1.10",
     "@radix-ui/react-scroll-area": "^1.2.5",
     "@radix-ui/react-separator": "^1.1.4",
@@ -22,9 +23,11 @@
     "gsap": "^3.12.7",
     "lucide-react": "^0.501.0",
     "next": "14.2.5",
+    "next-intl": "^4.0.2",
     "react": "^18",
     "react-dom": "^18",
     "react-tsparticles": "^2.12.2",
+    "react-world-flags": "^1.6.0",
     "swiper": "^11.2.6",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
